[package]
name = "distributed_hash_table"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crc32c = "0.6.8"
futures = "0.3"
tarpc = { version = "0.34", features = ["tokio1"] }
tempfile = "3.12.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.10.0", features = ["v4"] }
